# heso

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_FINDINGS.md  AGENT_FINDINGS_V2.md  AGENT_FINDINGS_V3.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REGRESSION_SWEEP.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  generated-vectors.json  pyproject.toml  rust-toolchain.toml  setup.cfg  setup.py  state.json  state.schema.json  tm-open.json  tm.json  todomvc.json
.agent/: CONVENTIONS.md  GLOSSARY.md  MAP.md  PRIORITIES.md  WORKFLOWS.md  edge-case-hunt.md
.agent/HOWTO/: add-a-crate.md  add-an-adr.md  update-state.md  use-research.md
.cargo/: config.toml
.github/workflows/: ci.yml  hygiene.yml  pypi.yml  release.yml
bench/jsdom/: package-lock.json  package.json  run.mjs
bench/playwright/: .gitignore  README.md  RESULTS.md  heso-results.json  package.json  playwright-results.json  render-comparison.mjs  run.mjs  targets.json
bug-reports/: 01-top-sites.md  02-verb-ergonomics.md  03-js-engine-stress.md  04-long-running.md  05-receipts-determinism.md  SYNTHESIS.md  fix-01-trust-pass.md  fix-02-js-engine.md  fix-03-dom-apis.md  fix-04-receipts.md  fix-05-polish.md  fix-06-jquery-airgap.md
crates/heso-cli/: Cargo.toml
crates/heso-cli/src/: artifact_sniffer.rs  batch.rs  cmd_info.rs  cmd_seal.rs  cmd_unseal.rs  cmd_verify.rs  ecosystem.rs  main.rs  receipts.rs  registry.rs  search.rs  serve.rs  template.rs  tofu.rs
crates/heso-cli/src/search/: backend.rs  cache.rs  classify.rs  http.rs  mod.rs  parse.rs
crates/heso-cli/tests/: auto_scroll.rs  batch.rs  best_effort.rs  bug_fixes_click_navigation.rs  cassette_replay.rs  click_fill_js.rs  generate_vectors.rs  identity_flow.rs  info_polymorphic.rs  inject_script.rs  locator_flags.rs  plat_dev_tools.rs  producer_signing.rs  product_surface.rs  read_since.rs  read_verb.rs  receipts_round_trip.rs  refresh.rs  registry_subcommand.rs  replay_plan_flag.rs  seal_polymorphic.rs  search.rs  serve_stateful_rpc.rs  template_v0.rs  verify_polymorphic.rs  verify_trust_layer.rs  wait_verb.rs
crates/heso-compat-suite/: Cargo.toml  README.md
crates/heso-compat-suite/src/: main.rs
crates/heso-compat-tests/: Cargo.toml
crates/heso-compat-tests/cassettes/docs_rs/: body.html  meta.json
crates/heso-compat-tests/cassettes/example_com/: meta.json
crates/heso-compat-tests/cassettes/hacker_news/: body.html  meta.json
crates/heso-compat-tests/cassettes/httpbin_forms_post/: meta.json
crates/heso-compat-tests/cassettes/httpbin_html/: meta.json
crates/heso-compat-tests/cassettes/iana_reserved/: body.html  meta.json
crates/heso-compat-tests/cassettes/rust_lang/: body.html  meta.json
crates/heso-compat-tests/cassettes/wikipedia_html/: body.html  meta.json
crates/heso-compat-tests/src/: lib.rs
crates/heso-compat-tests/tests/: invariants.rs
crates/heso-core/: Cargo.toml
crates/heso-core/src/: identity.rs  lib.rs
crates/heso-engine-api/: Cargo.toml
crates/heso-engine-api/src/: lib.rs
crates/heso-engine-fetch/: Cargo.toml
crates/heso-engine-fetch/src/: actions.rs  cassette.rs  data_attrs.rs  data_url.rs  explore.rs  inline_data.rs  lib.rs  metadata.rs  plat.rs  private_network.rs  step.rs  tree.rs
crates/heso-engine-js/: Cargo.toml
crates/heso-engine-js/src/: cookies.rs  custom_elements.rs  dom.rs  engine.rs  events.rs  fetch.rs  form_submit.rs  history.rs  import_map.rs  intersection_observer.rs  lib.rs  modules.rs  mutation_observer.rs  rng.rs  sandbox_globals.rs  scripts.rs  session.rs  timers.rs  url_search_params.rs  wait_for.rs  web_apis.rs  xhr.rs
crates/heso-engine-js/tests/: anchor_href.rs  blob.rs  cookies.rs  current_script.rs  custom_elements.rs  data_url_scripts.rs  dispatch.rs  dom_collection_apis.rs  engine_drop_cleanup.rs  engine_drop_reproducer.rs  event_constructors.rs  fetch_integration.rs  form_idl.rs  form_submit.rs  form_submit_live.rs  formdata.rs  globals_smoke.rs  headers.rs  heavy_bundle.rs  history.rs  html_element_subclasses.rs  intersection_observer.rs  jquery_airgap_smoke.rs  late_upgrade.rs  modules_integration.rs  mutation_observer.rs  non_error_throw.rs  performance_user_timing.rs  shadow_dom.rs  spa_patterns.rs  style_setter.rs  url_searchparams.rs  xhr_integration.rs
crates/heso-engine-js/tests/fixtures/: astro.html
crates/heso-primitives/: Cargo.toml
crates/heso-primitives/examples/: demo.rs
crates/heso-primitives/src/: lib.rs
crates/heso-trace/: Cargo.toml
crates/heso-trace-exec/: Cargo.toml
crates/heso-trace-exec/examples/: receipt.rs
crates/heso-trace-exec/src/: lib.rs
crates/heso-trace/src/: lib.rs
crates/heso-verify/: Cargo.toml
crates/heso-verify/src/: lib.rs  main.rs
decisions/: 0000-template.md  0001-cargo-workspace-layout.md  0002-engine-trait-boundary.md  0003-servo-as-first-engine.md  0004-mcp-as-primary-api.md  0005-ed25519-identity.md  0006-dual-mit-apache-license.md  0007-agent-meta-directory.md  0008-deterministic-execution.md  0009-heso-run-single-tool.md  0010-primitives-as-terminal-commands.md  0011-chromium-cdp-first-engine.md  0012-fetch-only-native-engine.md  0013-engine-as-semantic-extractor.md  0014-bundled-quickjs-agent-dom.md  0015-heso-as-cartographer.md  0016-positioning-headless-browser-for-agents.md  README.md
demo/: README.md  agent.py  demo.cast  demo.tape  record.ps1  record.py
docs/: the-one-tool.md
npm/heso/: README.md  index.d.ts  index.js  package.json
proposals/: 0000-template.md  README.md
python/heso/: __init__.py  __main__.py  registry.py
research/: INDEX.md  README.md
research/anti-bot/: .gitkeep
research/browser-engines/: README.md  agent-first-design.md  determinism.md  ladybird-architecture.md  rendering-pipeline.md
research/existing-agent-browsers/: .gitkeep
research/existing-art/: rquickjs-dom-precedents.md
research/extraction-techniques/: .gitkeep
research/mcp-ecosystem/: .gitkeep
research/rust-llm-mistakes/: README.md
scripts/: README.md
spec/: HESO-1.0.md
(+1 files in other folders)
