[workspace]
resolver = "2"
members = [
    "crates/heso-core",
    "crates/heso-engine-api",
    "crates/heso-engine-fetch",
    "crates/heso-engine-js",
    "crates/heso-primitives",
    "crates/heso-trace",
    "crates/heso-trace-exec",
    "crates/heso-cli",
    "crates/heso-compat-tests",
    "crates/heso-compat-suite",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akku41809/heso"
homepage = "https://github.com/akku41809/heso"
authors = ["Akshay and heso contributors"]

[workspace.dependencies]
# Cross-crate shared deps go here. Pin versions intentionally.
# Add to crates' Cargo.toml as: foo = { workspace = true }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "http2"] }
# `scraper`'s default feature set enables `getopts` via the `main`
# feature, which is only used by scraper's own bundled CLI binary.
# Pruning to `errors` keeps the public API we use and drops one
# transitive crate from the build.
scraper = { version = "0.21", default-features = false, features = ["errors"] }
ego-tree = "0.9"
regex = "1"
# Ed25519 signing (item H — signed receipts; ADR 0005). 2.x is the current
# stable; uses `rand_core = "0.6"` and exposes `SigningKey::generate` only
# when the `rand_core` feature is on.
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "rand_core"] }
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
# Fat LTO + `panic = "abort"` shave ~15–25% off the stripped binary
# combined. Safe here because every crate sets
# `unsafe_code = "forbid"` and nothing in the workspace uses
# `catch_unwind` — there is no unwinding to preserve. The trade is
# slower link, which we accept for the binary-size win.
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

# Dev/test wall-clock optimisation: compile dependencies (scraper,
# regex, rquickjs, dom_query, html5ever, blake3, brotli, rustls, …) at
# opt-level = 3 once and cache them, while leaving our own crates at
# opt-level = 0 so incremental rebuilds stay fast. Big win for the
# 324-test suite which does real HTML parsing + crypto in tests.
[profile.dev.package."*"]
opt-level = 3
