[workspace]
resolver = "2"
members = [
    "crates/heso-core",
    "crates/heso-engine-api",
    "crates/heso-engine-fetch",
    "crates/heso-verify",
    "crates/heso-engine-js",
    "crates/heso-primitives",
    "crates/heso-trace",
    "crates/heso-trace-exec",
    "crates/heso-cli",
    "crates/heso-compat-tests",
    "crates/heso-compat-suite",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blank3rs/heso"
homepage = "https://www.heso.ca"
authors = ["Akshay and heso contributors"]

[workspace.dependencies]
# Cross-crate shared deps go here. Pin versions intentionally.
# Add to crates' Cargo.toml as: foo = { workspace = true }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RFC 8785 JSON Canonicalization Scheme. The exact byte string used as
# the input to BLAKE3 and Ed25519 — vetted spec, vetted impl, no
# homegrown escape rules in load-bearing crypto paths.
serde_jcs = "0.2"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "http2", "cookies"] }
# Shared, spec-compliant cookie jar wired into reqwest via the
# `cookies` feature. `cookie_store` owns the RFC 6265 parser + the
# path/domain/secure matching rules; `reqwest_cookie_store` is the
# thin adapter that lets us hand the same store to `reqwest`'s
# `ClientBuilder::cookie_provider` AND keep a Rust-side handle to
# read/write cookies from JS (the `document.cookie` bridge in
# `heso-engine-js::cookies`). Both crates pin to versions that
# match `reqwest 0.12`'s cookie integration — `reqwest_cookie_store`
# 0.8 wires `cookie_store ^0.21` into `reqwest ^0.12`'s
# `cookie_provider` (its 0.10 line targets reqwest 0.13).
cookie_store = "0.21"
reqwest_cookie_store = "0.8"
# `scraper`'s default feature set enables `getopts` via the `main`
# feature, which is only used by scraper's own bundled CLI binary.
# Pruning to `errors` keeps the public API we use and drops one
# transitive crate from the build.
scraper = { version = "0.21", default-features = false, features = ["errors"] }
ego-tree = "0.9"
regex = "1"
# Ed25519 signing (item H — signed receipts; ADR 0005). 2.x is the current
# stable; uses `rand_core = "0.6"` and exposes `SigningKey::generate` only
# when the `rand_core` feature is on.
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "rand_core"] }
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
# Always-on search resilience (Workstream A; ADR 0026). Runtime-agnostic
# retry with full-jitter exponential backoff; `fastrand`-only at runtime,
# per-call `.when()` predicate to retry throttles while accepting genuine
# empty pages.
backon = "1.6"
# Client-side request pacing for the search backend pool. `default-features
# = false` drops the `unsafe` `quanta` clock and the unused `dashmap`,
# falling back to the std `Instant` MonotonicClock — load-bearing for the
# workspace-wide `unsafe_code = "forbid"`. `jitter` enables
# `until_ready_with_jitter`.
governor = { version = "0.10", default-features = false, features = ["std", "jitter"] }
# Jitter source + UA/host rotation index for the search pool. Tiny, no
# `unsafe` in our use; already pulled transitively, taken as a direct dep.
fastrand = "2"
# `Retry-After` HTTP-date parsing for the search retry path. Already
# pulled transitively through `hyper`; taken as a direct dep so the
# clamp logic doesn't hand-roll RFC 7231 date grammar.
httpdate = "1"

[profile.release]
opt-level = 3
# Fat LTO + `panic = "abort"` shave ~15–25% off the stripped binary
# combined. Safe here because every crate sets
# `unsafe_code = "forbid"` and nothing in the workspace uses
# `catch_unwind` — there is no unwinding to preserve. The trade is
# slower link, which we accept for the binary-size win.
lto = "fat"
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

# Dev/test wall-clock optimisation: compile dependencies (scraper,
# regex, rquickjs, dom_query, html5ever, blake3, brotli, rustls, …) at
# opt-level = 3 once and cache them, while leaving our own crates at
# opt-level = 0 so incremental rebuilds stay fast. Big win for the
# 324-test suite which does real HTML parsing + crypto in tests.
[profile.dev.package."*"]
opt-level = 3

# cargo-dist build profile (release.yml uses `dist build` which compiles
# with this profile). Inherits release; turns on thin LTO for smaller +
# faster binaries in the published archives. Symbols are stripped via
# `strip = true` in [profile.release] above, so we don't repeat it here.
[profile.dist]
inherits = "release"
lto = "thin"
