# Setuptools config for the `heso` PyPI distribution.
#
# What changed in v0.0.2:
#   v0.0.1 shipped a binary-only wheel via maturin (`bindings = bin`).
#   That gave us `heso open URL` on PATH after `pip install heso` but
#   left zero room for a Python library API. Users asked for both —
#   subprocess wrapper + import surface.
#
# Now: setuptools assembles a *normal* Python package at `python/heso/`
# that bundles the prebuilt `heso(.exe)` binary as package data under
# `heso/bin/`. The library (`heso.open`, `heso.read`, etc.) shells out
# to that bundled binary; the CLI entry point (`[project.scripts]
# heso`) generates a tiny wrapper that exec's the same binary. Same
# binary, two faces.
#
# Build flow:
#   1. `scripts/release.ps1` builds `target/release/heso.exe` first.
#   2. The script copies that binary into `python/heso/bin/heso.exe`.
#   3. `python -m build --wheel --no-isolation` (or `pip wheel . -w
#      dist/python/`) produces a wheel.
#   4. The wheel platform tag is fixed up to `py3-none-win_amd64` (the
#      build script passes `--config-setting=--plat-name=win_amd64`
#      to bdist_wheel; if the wheel still comes out as `py3-none-any`,
#      `wheel tags --platform-tag win_amd64 *.whl` rewrites it).
#   5. `twine upload dist/python/*.whl`.
#
# No Rust compilation in the wheel build. The wheel is "pure Python"
# from setuptools' perspective; the binary is just a data file.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heso"
version = "0.0.12"
description = "The agent-native web engine. No Chromium. No Node. One Rust binary."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["headless-browser", "agent", "ai", "web-scraping", "automation"]
authors = [{ name = "Akshay and heso contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://www.heso.ca"
Documentation = "https://www.heso.ca/docs"
Repository = "https://github.com/blank3rs/heso"
Issues = "https://github.com/blank3rs/heso/issues"

[project.scripts]
# `pip install heso` generates a launcher (`heso.exe` on Windows, a
# shebanged shim on POSIX) that imports this module and calls main().
# main() exec's into the bundled binary. Net: `heso open URL` works
# on PATH after install, identical UX to the v0.0.1 maturin wheel.
heso = "heso.__main__:main"

# ----------------------------------------------------------------------
# setuptools section — package layout
# ----------------------------------------------------------------------
#
# `package-dir` maps the import name `heso` to the `python/heso`
# directory in the source tree. This keeps the Rust workspace
# (`crates/`, `target/`, `Cargo.toml`) at the repo root and the Python
# wrapper in its own sibling `python/` subdir, which matches the layout
# astral-sh/ruff, prefix-dev/pixi, and a few other Rust+Python projects
# settled on.
#
# `package-data` ships `bin/heso(.exe)` and the `.gitkeep` inside the
# wheel. The release script populates `python/heso/bin/heso.exe`
# before invoking `python -m build`, so the resulting wheel will
# include the binary alongside the Python source.

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["heso*"]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
heso = ["bin/heso", "bin/heso.exe", "bin/.gitkeep"]

# ----------------------------------------------------------------------
# bdist_wheel platform tag
# ----------------------------------------------------------------------
#
# v0.0.1 hardcoded `plat-name = "win_amd64"` here because the only
# published wheel was Windows. v0.0.2 onwards we publish five wheels
# in parallel from `.github/workflows/pypi.yml`, each passing its
# own `--plat-name=<tag>` to bdist_wheel and post-fixing the file
# name via `wheel tags` if setuptools dropped the build option.
#
# As a result there is no longer a single "right" plat_name to
# hardcode. Local `python -m build` runs without a flag will produce
# a `py3-none-any` wheel — fine for testing, never for publish.
