[package]
name = "heso-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "heso — the agent-native web engine. No Chromium. No Node. One Rust binary."

[[bin]]
name = "heso"
path = "src/main.rs"

[dependencies]
heso-core = { path = "../heso-core" }
heso-engine-api = { path = "../heso-engine-api" }
heso-engine-fetch = { path = "../heso-engine-fetch" }
heso-engine-js = { path = "../heso-engine-js" }
heso-primitives = { path = "../heso-primitives" }
heso-trace = { path = "../heso-trace" }
heso-trace-exec = { path = "../heso-trace-exec" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "fs"] }
# `regex` compiles the `--url-matches REGEX` wait condition + the
# matching `wait` RPC method. Workspace dep — same crate `heso-trace`
# and `heso-engine-js` use, no new top-level dep introduced.
regex.workspace = true
# `blake3` powers the `content_hash` field on `heso read` envelopes
# (BLAKE3 of title + visible-text + actions[].name/ref + forms[]) so
# agents can diff cross-call state. Also drives `--complete`'s
# auto-scroll loop — the per-iteration content hash is the stopping
# condition (loop halts when the hash stabilizes). Workspace dep —
# same crate `heso-engine-fetch` uses for `plat_hash`, no new
# top-level dep introduced.
blake3.workspace = true
# `reqwest` powers the `heso search` verb's standalone HTTP client.
# We can't reuse `FetchEngine::client()` for DDG/Wiki because that
# client identifies as `heso/<version>` — DDG HTML serves anti-bot
# pages to non-browser-shaped UAs. Search builds its own client with
# the `Mozilla/5.0 (compatible; heso/0.0.1)` UA that matches what JS
# already exposes via `navigator.userAgent`. Workspace dep.
reqwest.workspace = true
# `scraper` is used by the search verb's DuckDuckGo HTML parser. Same
# crate `heso-engine-fetch` uses for the action graph and tree
# extraction — no new top-level dep introduced.
scraper.workspace = true
# `url::form_urlencoded` is used by the search verb to build the DDG
# POST body and unwrap the `uddg=` redirect parameter.
url.workspace = true
# Global allocator: mimalloc beats Windows' UCRT allocator by
# 20–50% on alloc-heavy workloads (reqwest body buffers, scraper
# tree, serde_json, canonical-JSON writes) and has near-zero init
# cost. For a one-shot CLI on Windows this is one of the largest
# cold-start wins per line of code.
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = "3"
# wiremock-rs: localhost mock server. Used by the `heso serve` JSON-RPC
# integration tests to drive multi-step write workflows (fill / submit /
# eval / navigate) against a hermetic HTTP server. Apache-2.0.
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"
