[package]
name = "heso-compat-suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "End-to-end compatibility + timing benchmark. Runs heso against a curated list of real-world site/framework targets; emits JSON + COMPATIBILITY.md scorecard."
publish = false

[[bin]]
name = "heso-compat-suite"
path = "src/main.rs"

[dependencies]
heso-engine-fetch = { path = "../heso-engine-fetch" }
heso-engine-js = { path = "../heso-engine-js" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "io-std", "fs"] }
url.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
