[package]
name = "heso-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types, error enum, and core traits for heso."

[dependencies]
thiserror.workspace = true
url.workspace = true
serde = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
