[package]
name = "heso-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types, error enum, and core traits for heso."

[dependencies]
thiserror.workspace = true
url.workspace = true
serde = { workspace = true }
# Identity / signing (item H, ADR 0005). On-disk key format + signing API.
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
# Signer fingerprint: BLAKE3 of the raw public key. `heso-verify` exposes
# the same `signer_fingerprint` for the keyless verify path; heso-core does
# not depend on heso-verify, so the producer side computes it inline here
# rather than inverting the engine -> verify dependency direction.
blake3 = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
