[package]
name = "heso-engine-fetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "heso static path — native HTTP + HTML EngineApi. The agent-native web engine. No Chromium. No Node. One Rust binary."

[dependencies]
heso-core = { path = "../heso-core" }
heso-engine-api = { path = "../heso-engine-api" }
blake3.workspace = true
reqwest.workspace = true
scraper.workspace = true
ego-tree.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
# Shared cookie jar — wired into the engine's `reqwest::Client` via
# `ClientBuilder::cookie_provider` so every Set-Cookie response header
# automatically populates the same jar that `heso-engine-js` exposes
# to JS as `document.cookie`. See `FetchEngine::cookie_jar`.
cookie_store.workspace = true
reqwest_cookie_store.workspace = true

[features]
# Opt-in instrumentation: when enabled, `explore::canonical_key` and a few
# other hot helpers increment a process-wide atomic counter so a fixture
# benchmark can measure per-page allocation pressure. Off by default —
# no overhead, no exports — and never enabled by the shipped CLI.
perf-trace = []

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
