[package]
name = "heso-engine-fetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "heso fetch + parse engine. Native HTTP, HTML5 parsing, visible-text extraction, action detection, and content hashing for the non-JavaScript read path."

[dependencies]
heso-core = { path = "../heso-core" }
heso-engine-api = { path = "../heso-engine-api" }
# Dependency direction is engine -> verify, never the reverse. The
# canonicalization / plat_hash / sealed-envelope open+verify path lives
# in `heso-verify` (the standalone Grade-0 verifier) and `plat.rs` here
# is a thin producer/wrapper layer over it. `heso-verify` must NOT
# depend on this crate or any engine/DOM/network crate.
heso-verify = { path = "../heso-verify" }
base64.workspace = true
blake3.workspace = true
reqwest.workspace = true
scraper.workspace = true
ego-tree.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
# Shared cookie jar — wired into the engine's `reqwest::Client` via
# `ClientBuilder::cookie_provider` so every Set-Cookie response header
# automatically populates the same jar that `heso-engine-js` exposes
# to JS as `document.cookie`. See `FetchEngine::cookie_jar`.
cookie_store.workspace = true
reqwest_cookie_store.workspace = true

[features]
# Opt-in instrumentation: when enabled, `explore::canonical_key` and a few
# other hot helpers increment a process-wide atomic counter so a fixture
# benchmark can measure per-page allocation pressure. Off by default —
# no overhead, no exports — and never enabled by the shipped CLI.
perf-trace = []

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
