[package]
name = "heso-engine-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Optional JavaScript-capable engine path: QuickJS via rquickjs + agent-shaped DOM. Sibling of heso-engine-fetch; the static path remains the default. See ADR 0014."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Phase 1B adds the agent-shaped DOM as #[rquickjs::class]-backed
# Rust types — needs `classes` (Class<T>, define, instance),
# `properties` (getters/setters), and `macro` (derive macros).
rquickjs = { version = "0.11", features = ["classes", "properties", "macro"] }
# heso-engine-fetch supplies the protocol-level fetch + action graph
# we'll wire DOM access against once mutations + events land.
heso-engine-fetch = { path = "../heso-engine-fetch" }
# dom_query is the load-bearing mutable DOM under the JS-DOM bridge,
# chosen in research/existing-art/rquickjs-dom-precedents.md. It owns
# the parse tree (`Document`), exposes a jQuery-like surface
# (`Selection`, `NodeRef`) with attribute / class / child mutation,
# and is `html5ever`-backed so it matches the rest of the workspace.
# The crate has had 27 breaking minor releases — pin to exactly
# 0.28.0 (the only 0.28.x at time of writing). Bumping is a deliberate
# act, not an automatic minor lift. See ADR 0014.
dom_query = "=0.28.0"
# Phase 2 determinism shims (per ADR 0008): seed a single ChaCha20 PRNG
# from the session's `--seed N` value and route `Math.random`,
# `crypto.getRandomValues`, and `crypto.randomUUID` through it so two
# runs of the same script with the same seed produce byte-identical
# observable output. `rand_chacha::ChaCha20Rng` is portable across
# platforms and library versions (unlike `StdRng`), which is the
# property we actually need. See `src/rng.rs`.
rand = "0.8"
rand_chacha = "0.3"
# Phase 1C item C: `fetch()` inside JS. Shares the workspace
# `reqwest::Client` (same TLS, gzip/brotli, HTTP/2 settings as the
# static `heso-engine-fetch` path) so cookies and (when item M
# lands) recorded-network playback stay coherent. See `src/fetch.rs`
# and `decisions/0014` (Phase 2 stdlib subset row).
reqwest = { workspace = true }
tokio = { workspace = true }
# Session URL tracking (`crate::session::JsSession`): the page session
# owns its current URL so navigation across steps is observable on the
# Rust side. Matches the rest of the workspace's `url = 2`.
url = { workspace = true }

[dev-dependencies]
# wiremock-rs: localhost mock server for the in-JS fetch tests.
# Apache-2.0, mocking-only (recording is item M).
wiremock = "0.6"
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
